# kshell

./: CMakeLists.txt  HISTORY  README.md  build.sh
bundle-sample/: CMakeLists.txt
bundle-sample/caller_bundle/: caller_bundle_activator.cpp  caller_bundle_activator.h  export.cpp  export.h  meta.inf
bundle-sample/my_bundle/: export.cpp  meta.inf  my_bundle_activator.cpp  my_bundle_activator.h  my_bundle_service.h  my_bundle_service_impl.h
kshell/: CMakeLists.txt
kshell/interface/: auto_bundle.h  auto_service.h  bundle.h  bundle_activator.h  bundle_context.h  bundle_event.h  bundle_exception.h  bundle_guid.h  bundle_listener.h  bundle_reference.h  class_not_found_exception.h  framework.h  framework_event.h  framework_exception.h  interrupted_exception.h  kshell.h  pragma.h  service.h  service_event.h  service_exception.h  service_listener.h  service_reference.h  service_wrapper.h  service_wrapper_impl.inl
kshell/internal/: bundle_box.cpp  bundle_box.h  bundle_box_loader.cpp  bundle_box_loader.h  bundle_config.h  bundle_context_impl.cpp  bundle_context_impl.h  bundle_guid.h  bundle_handle.h  bundle_impl.cpp  bundle_impl.h  bundle_loader.cpp  bundle_loader.h  bundle_manager.cpp  bundle_manager.h  bundle_reference_impl.cpp  bundle_reference_impl.h  color.h  condition.cpp  condition.h  daemon_linux.cpp  daemon_win32.cpp  framework_factory.cpp  framework_factory.h  framework_impl.cpp  framework_impl.h  ignore.h  misc.cpp  misc.h  path.cpp  path.h  pid_file.cpp  pid_file.h  resolver.cpp  resolver.h  scope_lock.cpp  scope_lock.h  service_reference_impl.cpp  service_reference_impl.h  util.cpp  (+2 more)
win-proj/: caller_bundle.vcxproj  kshell.sln  kshell.vcxproj  kshell.vcxproj.filters  my_bundle.vcxproj
